Clean the code